fix: initial dark mode colors

--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -10,11 +10,11 @@ body {
 }
 
 .height-48 {
-  height: 48%;
+  height: 46%;
 }
 
 .height-52 {
-  height: 52%;
+  height: 54%;
 }
 
 .top-sec {
